--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -1,10 +1,5 @@
 Unit1:
-  title: Build a Lab Notebook
-  description:  Install Tools.  Design lab notebook.  Learn GitHub Pages. Work with Pair (pair name). 
+  title: Deliveries - game peices
+  description:  background, sprites, blocks 
   start: 0
   end: 3
-Unit2:
-  title: Learn Language
-  description: Learn (JavaScript|Python|Java).  Start Agile development process.
-  start: 4
-  end: 7
