--- a/_data/compsci.yml
+++ b/_data/compsci.yml
@@ -1,6 +1,6 @@
 Unit1:
   title: Deliveries - Game Peices
-  description: sprites, platforms, objects,
+  description: sprites, platforms, Backgrounds
   start: 1
   end: 7
 Unit2:
