--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: CompSci Blogs
-description: "August 2023 to June 2024"
+title: Deliveries
+description: "deliveries game!"
 owner_name: Nighthawk Coders
 github_username: nighthawkcoders
 baseurl: "/BoxGame"
